# cli-chat

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: app.rs  input.rs  lib.rs  main.rs  model.rs  state.rs  tui.rs  websocket.rs
doc/german/: main.tex
server/: Cargo.toml
server/src/: app.rs  connection.rs  database.rs  lib.rs  main.rs  websocket.rs
