[package]
name = "chat-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
futures-util = "0.3.29" # Utilities for async programming
tokio = { version = "1.35.1", features = ["full"] } # Async runtime
tokio-tungstenite = { version = "0.21.0", features = [
    "native-tls",
] } # Async WebSocket


# Error handling
anyhow = "1.0.76"

# Logging
log = "0.4.20"
env_logger = "0.11.0"

# Database
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "macros"] }
